2010-01-27  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneProjectConfiguration.cs: Copy MtouchI18n and
	  MtouchSdkVersion when cloning configs. Fixes persisting
	  these values after editing them.

2010-01-25  Michael Hutchinson  <mhutchinson@novell.com>

	* Templates/IPhoneOpenGLProject.xpt.xml:
	* Templates/IPhoneUtilityProject.xpt.xml:
	* Templates/IPhoneNavBasedProject.xpt.xml:
	* Templates/IPhoneWindowBasedProject.xpt.xml: Fix xib file
	  format, standard headers, and auto-opening.

2010-01-25  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.IPhone.csproj:
	* MonoDevelop.IPhone.addin.xml:
	* Templates/IPhoneProject.xpt.xml:
	* Templates/IPhoneOpenGLProject.xpt.xml:
	* Templates/IPhoneUtilityProject.xpt.xml:
	* Templates/IPhoneNavBasedProject.xpt.xml: Added 3 new project
	  templates.

	* Templates/IPhoneViewXib.xft.xml:
	* Templates/IPhoneApplicationXib.xft.xml:
	* Templates/IPhoneViewController.xft.xml: Small tweaks.

	* Templates/IPhoneWindowBasedProject.xpt.xml: Renamed the
	  default project template to match Xcode.

2010-01-22  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.IPhone.addin.xml: Add a MonoDoc source for the
	  MonoTouch docs, so that MD can load them even after the Mono
	  framework directory is upgraded.

2010-01-16  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/IPhoneOptionsPanel.cs: Make the main nib picker entry
	  editable so that it can be cleared.

2010-01-14  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/IPhoneBuildOptionsPanel.cs: Fix displaying i18n options.

2010-01-13  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneBuildExtension.cs: Treat empty identity as "developer
	  automatic".

2009-12-31  Michael Hutchinson  <mhutchinson@novell.com>

	* Keychain.cs: Fix extracting the CN from X509 certs.

2009-12-29  Michael Hutchinson  <mhutchinson@novell.com>

	* MobileProvision.cs: Only return the first profile with each